# MLOps-Group-04

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  config.yaml  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: linting.yaml  tests.yaml
checkpoints/: ecg-resnet-epoch=03-val_loss=0.27.ckpt  ecg-resnet-epoch=03-val_loss=0.48.ckpt
data/: time_series.dvc
dockerfiles/: api.dockerfile  entrypoint.sh  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_1/: hparams.yaml  metrics.csv
profiler/: fit-perf_logs-[Strategy]SingleDeviceStrategy.validation_step.1768148544813416526.pt.trace.json  fit-perf_logs-[Strategy]SingleDeviceStrategy.validation_step.1768471428295993545.pt.trace.json  fit-perf_logs-[Strategy]SingleDeviceStrategy.validation_step.1768472815225264591.pt.trace.json  fit-perf_logs-[Strategy]SingleDeviceStrategy.validation_step.1768473155275871969.pt.trace.json  fit-perf_logs.txt  test-perf_logs-[Strategy]SingleDeviceStrategy.test_step.1768148631461562923.pt.trace.json  test-perf_logs-[Strategy]SingleDeviceStrategy.test_step.1768471561423225932.pt.trace.json  test-perf_logs-[Strategy]SingleDeviceStrategy.test_step.1768472831627842014.pt.trace.json  test-perf_logs-[Strategy]SingleDeviceStrategy.test_step.1768473189582425545.pt.trace.json  test-perf_logs.txt
reports/: README.md
src/: data.py  model.py  train.py
tests/: test_data.py  test_model.py  test_training.py
(+8 files in other folders)
